# TesisWilliam

./: .gitignore  pyproject.toml
backward_process/: __init__.py  generating.py
forward_process/: generate_noised_data.py
neural_network/: __init__.py  training_nn.py  utils.py
